--- a/index.html
+++ b/index.html
@@ -3,83 +3,60 @@
 
 <head>
   <meta charset="utf-8">
-  <title>😊 Kartheek's Personal Site</title>
+  <title>Kartheek Reddy Daida</title>
+  <link rel="stylesheet" href="css/styles.css">
+  <link rel="icon" href="favicon.ico">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300&family=Montserrat:wght@100&family=Sacramento&display=swap" rel="stylesheet">
 </head>
 
 <body>
-  <table cellspacing="20">
-    <tr>
-      <td><img src="images/kartheek-modified.png" alt="Kartheek Profile picture"></td>
-      <td>
-        <h1>Kartheek Reddy Daida</h1>
-        <p><em><a href="https://www.linkedin.com/in/kartheek-daida-5b711b25/">Sytems and Firmware Engineer</a></em></p>
-        <p>I am expert in performance enhancement, new inventions and coding.</p>
-      </td>
-    </tr>
-  </table>
-  <hr>
-  <h3>Education</h3>
-  <ul>
-    <li>Downhill high school</li>
-    <li>Gowtham Gudavalli</li>
-    <li>NIT Warangal</li>
-  </ul>
-  <hr>
-  <h3>Work Experience</h3>
-  <table cellspacing="10">
-    <thead>
-      <th>Dates</th>
-      <th>Work</th>
-    </thead>
-    <tbody>
-      <tr>
-        <td>2018-present</td>
-        <td>Firmware Engineer</td>
-      </tr>
-      <tr>
-        <td>2014-2018</td>
-        <td>Systems Engineer - Filesystems & Protocol</td>
-      </tr>
-      <tr>
-        <td>2008-2014</td>
-        <td>Systems Engineer - Filesystems</td>
-      </tr>
-    </tbody>
-  </table>
-  <hr>
-  <h3>Skills</h3>
-  <table border="1">
-    <tr>
-      <td>
-        <table cellspacing="10">
-          <tr>
-            <td>Kernel Development</td>
-            <td>⭐⭐⭐⭐⭐</td>
-          </tr>
-          <tr>
-            <td>Operating Systems</td>
-            <td>⭐⭐⭐⭐⭐</td>
-          </tr>
-        </table>
-      </td>
-      <td>
-        <table cellspacing="10">
-          <tr>
-            <td>Debugging</td>
-            <td>⭐⭐⭐⭐</td>
-          </tr>
-          <tr>
-            <td>Innovation</td>
-            <td>⭐⭐⭐</td>
-          </tr>
-        </table>
-      </td>
-    </tr>
-  </table>
-  <hr>
-  <a href="Hobbies.html">Hobbies</a>
-  <br>
-  <a href="Contact.html">Contact Me</a>
+
+  <div class="top-container">
+    <img class="top-cloud" src="images/cloud.png" alt="cloud-img">
+    <h1>I'm Kartheek.</h1>
+    <h2>a <span class="system-span">pro</span>grammer.</h2>
+    <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img">
+    <img src="images/mountain.png" alt="mountain-img">
+  </div>
+
+  <div class="middle-container">
+    <div class="profile">
+      <img src="images/kartheek-modified.png" alt="kartheek-img">
+      <h2>Hello.</h2>
+      <p class="para">I am expert in design and implmentation of Filesystems, SAN and NAS of Storage systems and firmware of SSD drvies.</p>
+    </div>
+    <hr>
+    <div class="skills">
+      <h2>My Skills.</h2>
+      <div class="skill-row">
+        <img class="design-img" src="https://image.flaticon.com/icons/png/512/1434/1434979.png" alt="design-img">
+        <h3>Design and Development</h3>
+        <p>I designed and developed multiple features in filesystem and SSD firmware which includes file cloning, object snapshots, filesystem checker, write director etc. </p>
+      </div>
+      <div class="skill-row">
+        <img class="perf-img" src="https://image.flaticon.com/icons/png/512/2211/2211607.png" alt="performance-img">
+        <h3>Performance Improvement</h3>
+        <p>I am expert in performance improvement of modules which includes import times, cloning times, write path etc.</p>
+      </div>
+    </div>
+    <hr>
+    <div class="contact-me">
+      <h2>Get In Touch</h2>
+      <h3>If you need high performing features in Systems.</h3>
+      <p class="contact-desc">Love Firmware or Filesystems as much as I do? Let's talk about how awesome they are! We can code together.</p>
+      <a class="btn" href="mailto:kartheeknitw@email.com">CONTACT ME</a>
+    </div>
+  </div>
+
+  <div class="bottom-container">
+    <a class="footer-link" href="https://www.linkedin.com/in/kartheek-daida-5b711b25/">LinkedIn</a>
+    <a class="footer-link" href="https://twitter.com/kartheeknitw">Twitter</a>
+    <a class="footer-link" href="https://kartheeknitw.github.io/cv/">Website</a>
+    <p class="copyright">© 2018 Kartheek Reddy Daida.</p>
+  </div>
+
 </body>
 
 </html>
